--- a/mobile_visualization_project/android/app/src/main/AndroidManifest.xml
+++ b/mobile_visualization_project/android/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="mobile_visualization_project"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Chart View"
+        android:icon="@mipmap/icon_launch">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
