--- a/mobile_visualization_project/pubspec.yaml
+++ b/mobile_visualization_project/pubspec.yaml
@@ -19,6 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.8.1
   charts_flutter: ^0.9.0
   bubble_chart: ^0.2.0
   flutter_launcher_icons: ^0.7.4
