--- a/mobile_visualization_project/pubspec.yaml
+++ b/mobile_visualization_project/pubspec.yaml
@@ -52,7 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/icon_launch.png
-  #  - images/
+    - assets/images/icon_bubble.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
