--- a/mobile_visualization_project/pubspec.yaml
+++ b/mobile_visualization_project/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.8.1
+  flutter_sparkline: ^0.1.0
+  flutter_staggered_grid_view: ^0.3.0
   charts_flutter: ^0.9.0
   bubble_chart: ^0.2.0
   flutter_launcher_icons: ^0.7.4
@@ -50,9 +52,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/icon_launch.png
+    - assets/images/bubble.jpg
+    - assets/images/bar.jpg
+    - assets/images/pie.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
